# src/main/java/com/cablepulse/model/ExpenseCategory.java
@@ -1,0 +1,9 @@
+package com.cablepulse.model;
+
+public enum ExpenseCategory {
+    WIRE,
+    FUEL,
+    REPAIR,
+    WAGES,
+    MISC
+}
